// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`omitting required keys results in undefined instead of null 1`] = `
Object {
  "description": undefined,
  "meta": Object {},
  "name": "valid_name",
  "time": null,
  "timestamp": undefined,
  "value": null,
}
`;

exports[`parseInt on metric instance outputs null 1`] = `"Invalid usage. Metric class instance cannot be treated as type 'default'"`;

exports[`stringifying includes all keys 1`] = `
Object {
  "description": "Valid description",
  "meta": Object {},
  "name": "valid_name",
  "time": null,
  "timestamp": 12345,
  "value": null,
}
`;

exports[`util.inspect includes all keys 1`] = `
"Metric { name: 'valid_name',
  description: 'Valid description',
  timestamp: 12345,
  value: 123,
  time: 12345,
  meta: { key: 'value' } }"
`;
